
[package]
name = "trading"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tui = "0.17"
crossterm = "0.26"
prost = "0.13.3"
futures-util = "0.3.31"

[build-dependencies]
prost-build = "0.13.3"
